# webdriver

./: .gitignore  Base64-DataURI-Guide.md  Dockerfile  Makefile  README.md  cabal.project  cabal.project.local.template  container-attach.sh  container-start.sh  differences.md  process-fails.sh  pyrethrum.cabal  test-all.log.bak  webdriver-precore.cabal
.devcontainer/: devcontainer.json  xhost-wrapper.sh
.github/: copilot-instructions.md
dev/: ContainerFiles.md  DockerBuildHaskellWD.sh  README.md  build.sh  config-ci.dhall  test-x11.sh  (+36 more)
webdriver-examples/: ChangeLog.md  LICENSE  README.md  WebDriverE2EDemoTest.hs  cabal.project  webdriver-examples.cabal
webdriver-examples/driver-demo-e2e/: Config.hs  Const.hs  E2EConst.hs  IOAPI.hs  IORunner.hs  IORunnerMinimal.hs  IORunnerMinimalForDocs.hs  IOUtils.hs  RuntimeConst.hs  TestData.hs  TestPages.hs  TestPagesBase64.hs  WebDriverE2EDemoTest.hs
webdriver-examples/driver-demo-e2e/.profile/: .gitkeep
webdriver-examples/driver-demo-e2e/BiDi/: BiDiAPI.hs  BiDiConnectionIssues.md  BiDiE2EDemoTest.hs  BiDiRunner.hs  DemoUtils.hs  IOAPI.hs  IORunner.hs  Network_Support_Status.md  WussDemo.hs
webdriver-examples/driver-demo-e2e/BiDi/Demos/: BrowserDemos.hs  BrowsingContextDemos.hs  BrowsingContextEventDemos.hs  EmulationDemos.hs  FileDialogEventDemo.hs  InputDemos.hs  InputEventDemos.hs  LogEventDemos.hs  NetworkDemos.hs  NetworkEventDemos.hs  NetworkSupportTest.hs  OtherDemos.hs  ScriptDemos.hs  ScriptEventDemos.hs  SessionDemos.hs  StorageDemos.hs  WebExtensionDemos.hs
webdriver-examples/driver-demo-e2e/Http/: E2EDriverE2EDemoTest.hs  HttpAPI.hs  HttpE2EDemoTest.hs  HttpRunner.hs  HttpRunnerMinimalForDocs.hs  IOAPI.hs  IORunner.hs  IORunnerMinimalForDocs.hs  IOUtils.hs  lahh.json
webdriver-examples/driver-demo-e2e/TestFiles/: checkboxes.html  demo.css  infiniteScroll.html  textArea.css  textArea.html
webdriver-examples/driver-demo-e2e/TestFiles/demoExtension/: manifest.json
webdriver-examples/driver-demo-e2e/TestFiles/uploadFiles/: document1.txt
webdriver-examples/driver-demo-e2e/config/: ConfigType.dhall  config.default.dhall  config.dhall
webdriver-precore/: ChangeLog.md  Dockerfile  README.md  cabal.project  webdriver-precore.cabal
webdriver-precore/docs/: demo.typ
webdriver-precore/src/: WebDriverPreCore.hs
webdriver-precore/src/WebDriverPreCore/: BiDi.hs  Capabilities.hs  Error.hs  Http.hs  HttpResponse.hs  Spec.hs  SpecDefinition.hs
webdriver-precore/src/WebDriverPreCore/BiDi/: API.hs  BiDiPath.hs  BiDiUrl.hs  Browser.hs  BrowsingContext.hs  Capabilities.hs  Command.hs  CoreTypes.hs  Emulation.hs  Error.hs  Event.hs  Input.hs  Log.hs  Network.hs  Protocol.hs  Response.hs  ResponseEvent.hs  Script.hs  Session.hs  SpecDefinition.hs  SpecDefinitionDeprecate.hs  Storage.hs  TODO.md  WebExtensions.hs  local.20250414.cddl  local.cddl  remote.20250414.cddl  remote.cddl  spec-20-11-25.txt  spec-changes-6-11-25-to-12-12-2025.md  spec-changes-summary-20-11-25.md  spec-changes-summary.md  spec.20250414.txt  spec.20250508.txt  spec.new.txt  spec.txt
webdriver-precore/src/WebDriverPreCore/HTTP/: API.hs  Capabilities.hs  Command.hs  HttpResponse.hs  Protocol.hs  SpecDefinition.hs
webdriver-precore/src/WebDriverPreCore/Http/: API.hs  Capabilities.hs  Command.hs  Error.hs  HttpResponse.hs  Protocol.hs  SpecDefinition.hs
webdriver-precore/src/WebDriverPreCore/Http/Internal/: Capabilities.hs  Utils.hs
webdriver-precore/src/WebDriverPreCore/Internal/: AesonUtils.hs  HTTPBidiCommon.hs  HttpBidiCommon.hs  Utils.hs
webdriver-precore/src/WebDriverPreCore/Spec/: Capabilities.hs  Error.hs  HttpResponse.hs  SpecDefinition.hs
webdriver-precore/test/: ApiCoverageTest.hs  ChangeLog.md  Config.hs  ConfigLoader.hs  Const.hs  DebugConfig.hs.template  ErrorCoverageTest.hs  IOUtils.hs  JSONParsingTest.hs  Logger.hs  README.md  RuntimeConst.hs  Test.hs  TestData.hs  TestPages.hs  TestServer.hs  TestServerAPI.hs  TestUtils.hs
webdriver-precore/test-server/: test-server.cabal
webdriver-precore/test-server/src/: TestPages.hs  TestServer.hs
webdriver-precore/test/.config/: .gitkeep  config.dhall
webdriver-precore/test/BiDi/: Actions.hs  BiDiActions.hs  BiDiRunner.hs  BiDiSocket.hs  BiDiUrl.hs  DemoUtils.hs  ErrorDemo.hs  EventBroadcastingGuide.md  Response.hs  Runner.hs  Socket.hs
webdriver-precore/test/BiDi/Demos/: BrowserDemos.hs  BrowsingContextDemos.hs  BrowsingContextEventDemos.hs  EmulationDemos.hs  FallbackDemos.hs  InputDemos.hs  InputEventDemos.hs  LogEventDemos.hs  NetworkDemos.hs  NetworkEventDemos.hs  NetworkSupportTest.hs  OtherDemos.hs  ScriptDemos.hs  ScriptEventDemos.hs  SessionDemos.hs  StorageDemos.hs  WebExtensionDemos.hs
webdriver-precore/test/HTTP/: Actions.hs  DemoUtils.hs  ErrorDemo.hs  FallbackDemo.hs  HttpActions.hs  HttpActionsDeprecated.hs  HttpClient.hs  HttpDemo.hs  HttpEndpoint.hs  HttpRunner.hs  HttpRunnerDeprecated.hs  Runner.hs
webdriver-precore/test/Http/: DemoUtils.hs  ErrorDemo.hs  FallbackDemo.hs  HttpActions.hs  HttpActionsDeprecated.hs  HttpDemo.hs  HttpDemoFallback.hs  HttpEndpoint.hs  HttpRunner.hs  HttpRunnerDeprecated.hs  HttpUtils.hs
webdriver-precore/test/TestFiles/: checkboxes.html  consoleLog.html  contentPage.html  demo.css  downloadLink.html  index.html  inputs.html  login.html  navigation2.html  navigation4.html  navigation6.html  nestedFrames.html  nestedFramesTop.html  prompt.html  slowLoad.html
webdriver-precore/test/TestFiles/demoExtension/: content.js  manifest.json
webdriver-precore/test/TestFiles/uploadFiles/: README.md  single_document.txt
webdriver-precore/test/doc/: mermaid-demo-structure.md
webdriver-precore/test/testFiles/: badJavaScript.html  download.html  fragment.html  frames.html  navigation1.html  navigation3.html  navigation5.html  scriptRealm.html  shadowDom.html  textArea.html  upload.html
webdriver-precore/test/testFiles/demoExtension/: README.md  background.js  popup.html  popup.js
webdriver-precore/test/testFiles/uploadFiles/: final_test.txt  presentation.pptx  spreadsheet.xlsx
webdriver-precore/utils/: AesonUtils.hs  Utils.hs
(+23 files in other folders)
