cabal-version: 3.8

name:           webdriver-examples
version:        0.1.0.2
homepage:       https://github.com/pyrethrum/webdriver/webdriver-precore#readme
bug-reports:    https://github.com/pyrethrum/webdriver/issues
author:         John Walker, Adrian Glouftsis
maintainer:     theghostjw@gmail.com
copyright:      2025 John Walker, Adrian Glouftsis
license:        BSD-3-Clause
category:       WebDriver, Demo
license-file:   LICENSE
build-type:     Simple
extra-doc-files: 
    README.md
    ChangeLog.md

tested-with: GHC == { 9.8.2, 9.8.4, 9.10.1 }

synopsis:       A test suite that demonstrates how to use the webdriver-precore library

description:
  The E2E tests in HttpE2EDemoTest module demonstrate how the webdriver-precore might be used in a library that provides a basic runner.
  The runner is implemented in HttpRunner module. See the @<https://github.com/pyrethrum/webdriver/webdriver-examples#readme/ the README>@ for more details.

-- For test/dev configs that shouldn't be installed
extra-source-files: 
  config/config.default.dhall

common commonExtensions
  default-extensions:
      AllowAmbiguousTypes
      BangPatterns
      BlockArguments
      ConstrainedClassMethods
      ConstraintKinds
      DisambiguateRecordFields
      DuplicateRecordFields
      DataKinds
      DefaultSignatures
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      EmptyCase
      ExistentialQuantification
      ExtendedDefaultRules
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      InstanceSigs
      KindSignatures
      LambdaCase
      LiberalTypeSynonyms
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoFieldSelectors
      NoImplicitPrelude
      NumericUnderscores
      OverloadedStrings
      OverloadedRecordDot
      PartialTypeSignatures
      PatternSynonyms
      PolyKinds
      QuasiQuotes
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      StrictData
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeFamilyDependencies
      TypeOperators

common commonGhcOptions
  ghc-options:
    -fmax-pmcheck-models=10000000 
    -ferror-spans 
    -fprint-potential-instances 
    -Wall 
    -Wcompat 
    -Wincomplete-record-updates 
    -Wincomplete-uni-patterns 
    -Wredundant-constraints
    -fwarn-tabs 
    -fwrite-ide-info 
    -fno-warn-type-defaults 
    -fno-warn-unused-do-bind 
    -Wno-overlapping-patterns 
    -fprefer-byte-code 
    -fbyte-code-and-object-code
    -fno-break-points
    -haddock
    -- -fdefer-type-errors


test-suite driver-demo-e2e
  import: commonExtensions, commonGhcOptions
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  hs-source-dirs: driver-demo-e2e
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , base64
    , bytestring
    , containers
    , dhall
    , directory
    , filepath
    , network
    , pretty-show ^>=1.10
    , req
    , tasty
    , tasty-hunit
    , tasty-discover
    , text
    , time
    , unliftio
    , webdriver-precore
    , websockets
    , wuss
  other-modules:
      Config
    , Const
    , IOUtils
    , TestPages
    , Http.HttpRunnerMinimalForDocs
    , Http.HttpRunner
    , Http.HttpAPI
    , Http.HttpE2EDemoTest
    , BiDi.BiDiRunner
    , BiDi.DemoUtils
    , BiDi.WussDemo
    , BiDi.Demos.BrowserDemos
    , BiDi.Demos.BrowsingContextDemos
    , BiDi.Demos.EmulationDemos
    , BiDi.Demos.InputDemos
    , BiDi.Demos.NetworkDemos
    , BiDi.Demos.NetworkSupportTest
    , BiDi.Demos.OtherDemos
    , BiDi.Demos.ScriptDemos
    , RuntimeConst
  build-tool-depends:
    tasty-discover:tasty-discover
  default-language: Haskell2010