cabal-version: 3.8

name:           test-server
version:        0.1.0.0
author:         John Walker, Adrian Glouftsis
maintainer:     theghostjw@gmail.com
category:       Testing
copyright:      2025 John Walker, Adrian Glouftsis
license:        BSD-3-Clause
build-type:     Simple

synopsis:       Simple test server for WebDriver testing

description:
  A simple HTTP server that provides basic authentication testing
  functionality for WebDriver tests.

common commonExtensions
  default-extensions:
    AllowAmbiguousTypes
      BangPatterns
      BlockArguments
      ConstrainedClassMethods
      ConstraintKinds
      DisambiguateRecordFields
      DuplicateRecordFields
      DataKinds
      DefaultSignatures
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      EmptyCase
      ExistentialQuantification
      ExtendedDefaultRules
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      InstanceSigs
      KindSignatures
      LambdaCase
      LiberalTypeSynonyms
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoFieldSelectors
      NoImplicitPrelude
      NumericUnderscores
      OverloadedStrings
      OverloadedRecordDot
      PartialTypeSignatures
      PatternSynonyms
      PolyKinds
      QuasiQuotes
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      StrictData
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeFamilyDependencies
      TypeOperators

common commonGhcOptions
  ghc-options:
    -fmax-pmcheck-models=10000000 
    -ferror-spans 
    -fprint-potential-instances 
    -Wall 
    -Wcompat 
    -Wincomplete-record-updates 
    -Wincomplete-uni-patterns 
    -Wredundant-constraints
    -fwarn-tabs 
    -fwrite-ide-info 
    -fno-warn-type-defaults 
    -fno-warn-unused-do-bind 
    -Wno-overlapping-patterns 
    -fprefer-byte-code 
    -fdefer-type-errors

executable test-server
  import: commonExtensions, commonGhcOptions
  main-is: TestServer.hs
  hs-source-dirs: src
  build-depends:
    base                 >=4.16  && <5,
    base64-bytestring    >=1.2   && <1.3,
    bytestring           >=0.10  && <0.12.3,
    http-types           >=0.12  && <0.13,
    scotty               >=0.20  && <0.23,
    text                 >=2.1   && <2.2
  default-language: Haskell2010
